# AplicacionROS2

./: .gitignore  README.md
Almacen_demo/: model.config
automatix/automatix/: CMakeLists.txt  package.xml
automatix/automatix_custom_interface/: CMakeLists.txt  package.xml
automatix/automatix_custom_interface/srv/: ActivarLeerQr.srv  BorrarZona.srv  EscanearMsg.srv  GuardarZona.srv  IrZona.srv
automatix/automatix_escaneo_autonomo/: package.xml  setup.cfg  setup.py
automatix/automatix_escaneo_autonomo/automatix_escaneo_autonomo/: escaneo_autonomo_server.py  post_mapa.py  put_producto.py
automatix/automatix_escaneo_autonomo/launch/: escaneo_autonomo_server.launch.py
automatix/automatix_escaneo_autonomo/test/: test_escaneo.py
automatix/automatix_guardar_zona_service/: package.xml  setup.cfg  setup.py
automatix/automatix_guardar_zona_service/automatix_guardar_zona_service/: automatix_borrar_zona_server.py  automatix_guardar_zona_server.py
automatix/automatix_guardar_zona_service/launch/: automatix_borrar_zona_server_launch.launch.py  automatix_guardar_zona_server_launch.launch.py
automatix/automatix_guardar_zona_service/test/: test_validar_zonas.py
automatix/automatix_my_nav2_system/: package.xml  setup.cfg  setup.py
automatix/automatix_my_nav2_system/automatix_my_nav2_system/: initial_pose_pub.py  navigate_to_pose_client.py
automatix/automatix_my_nav2_system/config/: my_map.pgm  my_map.yaml  my_slam.rviz  nav2_params.yaml
automatix/automatix_my_nav2_system/launch/: automatix_my_nav2_system.launch.py  my_nav2_system.launch.py  my_tb3_sim_nav2.launch.py  navigate_to_pose_client.launch.py
automatix/automatix_my_nav2_system_real/: package.xml  setup.cfg  setup.py
automatix/automatix_my_nav2_system_real/automatix_my_nav2_system_real/: navigate_to_pose_client.py
automatix/automatix_my_nav2_system_real/config/: my_map.pgm  my_map.yaml  my_nav2_params.yaml  nav2_default_view_new.rviz  nav2_params.yaml  project_params.yaml
automatix/automatix_my_nav2_system_real/launch/: my_nav2_system.launch.py  my_tb3_sim_nav2.launch.py  (+1 more)
automatix/automatix_my_slam/: package.xml  setup.cfg  setup.py
automatix/automatix_my_world/: CMakeLists.txt  package.xml
automatix/automatix_nav_zona/: package.xml  setup.cfg  setup.py
automatix/automatix_nav_zona/automatix_nav_zona/: nav_zona_server.py  put_producto.py  zona.py
automatix/automatix_nav_zona/launch/: nav_zona_server_launch.launch.py
automatix/automatix_nav_zona/test/: test_zona.py
automatix/automatix_predict_yolo/: package.xml  setup.cfg  setup.py
automatix/automatix_provide_map/: package.xml  setup.py
automatix/automatix_servicio_leer_qr/: package.xml  setup.cfg  setup.py
automatix/zonas/: zonas.txt
my_world/map/: my_map.yaml
(+80 files in other folders)
