<?xml version="1.0"?>
<?xml-model href=http://download.ros.org/schema/package_format3.xsd schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>automatix</name>
    <version>1.0</version>
    <description>ROS 2 packages for Automatix</description>
    <maintainer email="rubenpardocasanova@gmail.com">Ruben Pardo, Juan Ferrera, Pablo Enguix, Lorelay Florescu</maintainer>
    <license>Apache 2.0</license>
    <url type="website">https://automatix.rparcas.upv.edu.es/</url>
    <url type="repository">https://github.com/GTI-3B-ProyectoRobotica/AplicacionROS2.git</url>


    <buildtool_depend>ament_cmake</buildtool_depend>
    
    <exec_depend>automatix_my_world</exec_depend>
    <exec_depend>automatix_my_slam</exec_depend>
    <exec_depend>automatix_my_nav2_system</exec_depend>
    <exec_depend>automatix_escaneo_autonomo</exec_depend>
    <exec_depend>automatix_provide_map</exec_depend>
    <!-- Añadir aqui las dependencias creadas-->
    <!--<exec_depend>proy_asun_mundo</exec_depend>
    <exec_depend>proy_asun_nav_punto</exec_depend>
    <exec_depend>proy_asun_ruta</exec_depend>
    <exec_depend>proy_asun_captacion</exec_depend>-->
    
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
