<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>automatix_escaneo_autonomo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rubenpardocasanova@gmail.com">ruben</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <test_depend>test_escaneo</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
